# rust-functions-pure

./: .gitignore  Cargo.toml  docker-compose.yml  host.json  load-test.js
GetService/: function.json
docker/functions/: Dockerfile
src/: cosmos.rs  main.rs  types.rs
