[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

url = "2.2.2"
futures = "0.3.21"

reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.41"

chrono = "0.4.19"
hmac = "0.12.1"
sha2 = "0.10.2"
base64 = "0.13.0"
urlencoding = "2.1.0"
